Eliminado el snippet error-messages.xhtml. Sustituido en las vistas por un h:messages en rojo

--- a/sdi2-38/WebContent/infoCompleta.xhtml
+++ b/sdi2-38/WebContent/infoCompleta.xhtml
@@ -20,7 +20,7 @@
 				#{part.name} #{part.surname}	
 			</p:dataList>
 			
-			<ui:include src="/snippets/error-messages.xhtml" />
+			<h:messages style="color:red;margin:8px;"/>
 			
 		</h:form>
 	</div>
