--- a/sdi2-38/WebContent/listaViajes.xhtml
+++ b/sdi2-38/WebContent/listaViajes.xhtml
@@ -49,7 +49,7 @@
 					</p:column>
 				</p:dataTable>
 				
-				<ui:include src="/snippets/error-messages.xhtml" />
+				<h:messages style="color:red;margin:8px;"/>
 			</p:panel>
 		</h:form>
 
