--- a/sdi2-38/WebContent/listarSolicitantes.xhtml
+++ b/sdi2-38/WebContent/listarSolicitantes.xhtml
@@ -49,7 +49,7 @@
 			<p><h:outputFormat value="#{msgs.mensaje_quedanXplazas}"> <f:param value="${viaje.availablePax}"/></h:outputFormat></p>
 		</center>
 		
-		<ui:include src="/snippets/error-messages.xhtml" />
+		<h:messages style="color:red;margin:8px;"/>
 	</div>
 	</ui:define>
 	
