--- a/sdi2-38/WebContent/muestraViaje.xhtml
+++ b/sdi2-38/WebContent/muestraViaje.xhtml
@@ -56,7 +56,7 @@
 					action="ALGO QUE PREPARE LOS DATOS Y REDIRIJA A infoCompleta">
 		</center>
 		
-		<h:messages/>
+		<h:messages style="color:red;margin:8px;"/>
 	</div>
 	</ui:define>
 
