--- a/sdi2-38/WebContent/registroViaje.xhtml
+++ b/sdi2-38/WebContent/registroViaje.xhtml
@@ -17,7 +17,7 @@
 		<hr>
 		<br>
 		
-		<ui:include src="/snippets/trip-form.xhtml" />
+		<h:messages style="color:red;margin:8px;"/>
 		
 		<!-- TODO COMPLETAR -->	
 		<h:commandButton value="#{msgs.enlace_enviar}"
