--- a/sdi2-38/WebContent/viajesInvolucrado.xhtml
+++ b/sdi2-38/WebContent/viajesInvolucrado.xhtml
@@ -103,7 +103,7 @@
 					</p:column>
 				</p:dataTable>
 			</p:panel>
-			<ui:include src="/snippets/error-messages.xhtml" />
+			<h:messages style="color:red;margin:8px;"/>
 		</h:form>
 	</ui:define>
 
