Completada la lógica de registrar viajes.
Falta hacer que funcione (ﾉಥ益ಥ）ﾉ﻿ ┻━┻

--- a/sdi2-38/WebContent/modificarViaje.xhtml
+++ b/sdi2-38/WebContent/modificarViaje.xhtml
@@ -10,7 +10,7 @@
     </ui:define>
 
 	<ui:define name="cuerpo">
-		<form id="modificarViaje">
+		<form id="viaje">
 
 		<center>
 			<h1>#{msgs.titulo_modifiqueViaje}</h1>
@@ -20,9 +20,6 @@
 		
 		<ui:include src="/snippets/trip-form.xhtml" />
 		
-		<!-- TODO COMPLETAR -->	
-		<h:commandButton value="#{msgs.enlace_enviar}"
-					action="#{tripsController.METODO_QUE_MODIFIQUE_EL_VIAJE}">
 	</form>
 	</ui:define>
 	
