--- a/sdi2-38/WebContent/registroViaje.xhtml
+++ b/sdi2-38/WebContent/registroViaje.xhtml
@@ -2,29 +2,26 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui"
+	template="/templates/template-general.xhtml">
 
 	<ui:define name="titulo">
       <h:outputFormat value="#{msgs.cabecera_rellenable}"> <f:param value="#{msgs.cabecera_registroViaje}"/></h:outputFormat>
     </ui:define>
 
 	<ui:define name="cuerpo">
-		<form id="guardarViaje">
+		<form id="viaje">
 
 		<center>
 			<h1>#{msgs.titulo_registreViaje}</h1>
 		</center>
-		<hr>
-		<br>
+		<hr/>
+		<br/>
 		
-		<h:messages style="color:red;margin:8px;"/>
-		
-		<!-- TODO COMPLETAR -->	
-		<h:commandButton value="#{msgs.enlace_enviar}"
-					action="#{tripsController.METODO_QUE_CREE_EL_VIAJE}">
+		<ui:include src="/snippets/trip-form.xhtml" />
 					
 	</form>
-	<hr>
+	<hr/>
 	</ui:define>
 
 	<ui:define name="pie">
