--- a/sdi2-38/WebContent/snippets/trip-form.xhtml
+++ b/sdi2-38/WebContent/snippets/trip-form.xhtml
@@ -76,9 +76,7 @@
 			
 			#{msgs.campo_fechaConFormato}
 			<h:panelGroup>
-			<!-- TODO COMPLETAR -->
-			<h:inputText
-				value="#{tripsController.VARIABLE_PARA_GUARDAR_LA_FECHA}"
+			<h:inputText value="#{tripsController.departureDateConFormato}"
 				required="true" requiredMessage="#{msgs.mensaje_campoObligatorio}"
 				validatorMessage="#{msgs.mensaje_valorInvalido}" id="departureDate">
 				<f:validateRegex
@@ -89,9 +87,7 @@
 			
 			#{msgs.campo_horaConFormato}
 			<h:panelGroup>
-			<!-- TODO COMPLETAR -->
-			<h:inputText
-				value="#{tripsController.trip.VARIABLE_PARA_GUARDAR_LA_HORA}"
+			<h:inputText value="#{tripsController.departureHourConFormato}"
 				required="true" requiredMessage="#{msgs.mensaje_campoObligatorio}"
 				validatorMessage="#{msgs.mensaje_valorInvalido}" id="departureHour">
 				<f:validateRegex pattern="[0-9][0-9]\:[0-9][0-9]" />
@@ -172,9 +168,7 @@
 			
 			#{msgs.campo_fechaConFormato}
 			<h:panelGroup>
-			<!-- TODO COMPLETAR -->
-			<h:inputText
-				value="#{tripsController.VARIABLE_PARA_GUARDAR_LA_FECHA}"
+			<h:inputText value="#{tripsController.arrivalDateConFormato}"
 				required="true" requiredMessage="#{msgs.mensaje_campoObligatorio}"
 				validatorMessage="#{msgs.mensaje_valorInvalido}" id="arrivalDate">
 				<f:validateRegex
@@ -185,9 +179,7 @@
 			
 			#{msgs.campo_horaConFormato}
 			<h:panelGroup>
-			<!-- TODO COMPLETAR -->
-			<h:inputText
-				value="#{tripsController.trip.VARIABLE_PARA_GUARDAR_LA_HORA}"
+			<h:inputText value="#{tripsController.arrivalHourConFormato}"
 				required="true" requiredMessage="#{msgs.mensaje_campoObligatorio}"
 				validatorMessage="#{msgs.mensaje_valorInvalido}" id="arrivalHour">
 				<f:validateRegex pattern="[0-9][0-9]\:[0-9][0-9]" />
@@ -201,9 +193,7 @@
 	<h:panelGrid columns="2" styleClass="formTable">
 			#{msgs.campo_fechaCierreConFormato}
 			<h:panelGroup>
-			<!-- TODO COMPLETAR -->
-			<h:inputText
-				value="#{tripsController.VARIABLE_PARA_GUARDAR_LA_FECHA}"
+			<h:inputText value="#{tripsController.closingDateConFormato}"
 				required="true" requiredMessage="#{msgs.mensaje_campoObligatorio}"
 				validatorMessage="#{msgs.mensaje_valorInvalido}" id="closingDate">
 				<f:validateRegex
@@ -214,46 +204,45 @@
 			
 			#{msgs.campo_horaCierreConFormato}
 			<h:panelGroup>
-			<!-- TODO COMPLETAR -->
-			<h:inputText
-				value="#{tripsController.trip.VARIABLE_PARA_GUARDAR_LA_HORA}"
+			<h:inputText value="#{tripsController.closingHourConFormato}"
 				required="true" requiredMessage="#{msgs.mensaje_campoObligatorio}"
 				validatorMessage="#{msgs.mensaje_valorInvalido}" id="closingHour">
 				<f:validateRegex pattern="[0-9][0-9]\:[0-9][0-9]" />
 			</h:inputText>
 			<h:message for="closingHour" style="color:red;margin:8px;" />
 		</h:panelGroup>
-	</h:panelGrid>
 			
 			#{msgs.campo_pasajerosMaximos}
 			<h:panelGroup>
-		<h:inputText value="#{tripsController.trip.maxPax}" required="true"
-			requiredMessage="#{msgs.mensaje_campoObligatorio}"
-			converterMessage="#{msgs.mensaje_valorInvalido}" id="maxPas"
-			size="15">
-			<f:convertNumber maxFractionDigits="0" />
-		</h:inputText>
-		<h:message for="maxPas" style="color:red;margin:8px;" />
-	</h:panelGroup>
+			<h:inputText value="#{tripsController.trip.maxPax}" required="true"
+				requiredMessage="#{msgs.mensaje_campoObligatorio}"
+				converterMessage="#{msgs.mensaje_valorInvalido}" id="maxPas"
+				size="15">
+				<f:convertNumber maxFractionDigits="0" />
+			</h:inputText>
+			<h:message for="maxPas" style="color:red;margin:8px;" />
+		</h:panelGroup>
 			
 			#{msgs.campo_precioEstimado}
 			<h:panelGroup>
-		<h:inputText value="#{tripsController.trip.estimatedCost}"
-			required="true" requiredMessage="#{msgs.mensaje_campoObligatorio}"
-			converterMessage="#{msgs.mensaje_valorInvalido}" id="estimatedCost"
-			size="15">
-			<f:convertNumber maxFractionDigits="2" />
-		</h:inputText>
-		<h:message for="estimatedCost" style="color:red;margin:8px;" />
-	</h:panelGroup>
+			<h:inputText value="#{tripsController.trip.estimatedCost}"
+				required="true" requiredMessage="#{msgs.mensaje_campoObligatorio}"
+				converterMessage="#{msgs.mensaje_valorInvalido}" id="estimatedCost"
+				size="15">
+				<f:convertNumber maxFractionDigits="2" />
+			</h:inputText>
+			<h:message for="estimatedCost" style="color:red;margin:8px;" />
+		</h:panelGroup>
 			
 			#{msgs.campo_comentarios}
 			<h:panelGroup>
-		<h:inputTextarea value="#{tripsController.trip.comments}"
-			required="true" requiredMessage="#{msgs.mensaje_campoObligatorio}"
-			id="comments" cols="80" rows="10" wrap="virtual" />
-		<h:message for="comments" style="color:red;margin:8px;" />
-	</h:panelGroup>
+			<h:inputTextarea value="#{tripsController.trip.comments}"
+				required="true" requiredMessage="#{msgs.mensaje_campoObligatorio}"
+				id="comments" cols="80" rows="10" wrap="virtual" />
+			<h:message for="comments" style="color:red;margin:8px;" />
+		</h:panelGroup>
 	</h:panelGrid>
+		
+	<h:commandButton id="enviar" value="#{msgs.enlace_enviar}" action="#{tripsController.salva}"/>
 
 </ui:composition>
