--- a/sdi2-38/WebContent/snippets/menu.xhtml
+++ b/sdi2-38/WebContent/snippets/menu.xhtml
@@ -5,8 +5,7 @@
 	xmlns:f="http://java.sun.com/jsf/core">
 	
 	<p:menubar id="mimenu">
-		<p:submenu id="opciones" style="float:left" label="#{msgs.menu_Opciones}"
-			icon="ui-icon-document">
+		<p:submenu id="opciones" style="float:left" label="#{msgs.menu_Opciones}">
 			
 			<p:menuitem id="linkOpciones" style="float:left"
 				value="#{msgs.enlace_listarViajes}"
@@ -20,7 +19,7 @@
 			<p:menuitem id="linkMisViajes" style="float:left"
 				value="#{msgs.enlace_misViajes}" 
 				rendered="#{sesion.usuario!=null}" 
-				action="#{involucrado.misViajes}"/>
+				action="#{tripsController.sacarMisViajes}"/>
 				
 			<p:menuitem id="linkRegistrarViaje" style="float:left"
 				value="#{msgs.enlace_registrarViaje}"
@@ -39,8 +38,7 @@
 				
 		</p:submenu>
 		
-		<p:submenu style="float:right" label="#{msgs.menu_Idioma}"
-			icon="ui-icon-document">
+		<p:submenu style="float:right" label="#{msgs.menu_Idioma}">
 			
 			<p:menuitem id="linkespa" value="#{msgs.enlace_idiomaES}"
 				actionListener="#{settings.setSpanish}" update="@all" />
