Arreglado snippet de crear viaje. Hay que arreglar los sitios disponibles, siempre marca 2

--- a/sdi2-38/WebContent/registroViaje.xhtml
+++ b/sdi2-38/WebContent/registroViaje.xhtml
@@ -10,7 +10,7 @@
     </ui:define>
 
 	<ui:define name="cuerpo">
-		<form id="viaje">
+		<h:form id="viaje">
 
 		<center>
 			<h1>#{msgs.titulo_registreViaje}</h1>
@@ -20,7 +20,7 @@
 		
 		<ui:include src="/snippets/trip-form.xhtml" />
 					
-	</form>
+	</h:form>
 	<hr/>
 	</ui:define>
 
