--- a/sdi2-38/WebContent/snippets/menu.xhtml
+++ b/sdi2-38/WebContent/snippets/menu.xhtml
@@ -35,7 +35,7 @@
 				
 		</p:submenu>
 		
-		<p:submenu style="float:right" label="#{msgs.menu_Idioma}">
+		<p:submenu style="float:right" label="#{msgs.menu_Idioma}" id="idioma">
 			
 			<p:menuitem id="linkespa" value="#{msgs.enlace_idiomaES}"
 				actionListener="#{settings.setSpanish}" update="@all" />
