Borrado muestraViaje y quitados warnings de registro

--- a/sdi2-38/WebContent/modificarViaje.xhtml
+++ b/sdi2-38/WebContent/modificarViaje.xhtml
@@ -10,17 +10,17 @@
     </ui:define>
 
 	<ui:define name="cuerpo">
-		<form id="viaje">
+		<h:form id="viaje">
 
 		<center>
 			<h1>#{msgs.titulo_modifiqueViaje}</h1>
 		</center>
-		<hr>
-		<br>
+		<hr/>
+		<br/>
 		
 		<ui:include src="/snippets/trip-form.xhtml" />
 		
-	</form>
+	</h:form>
 	</ui:define>
 	
 	<ui:define name="pie">
