Ver aprticipantes desde mis viajes

--- a/sdi2-38/WebContent/viajesInvolucrado.xhtml
+++ b/sdi2-38/WebContent/viajesInvolucrado.xhtml
@@ -19,7 +19,10 @@
 					emptyMessage="#{msgs.mensaje_sinViajesPromotor}">
 					<p:column id="promoidViaje">
 						<f:facet name="header">#{msgs.campo_idViaje}</f:facet>
-						#{valtrip.id}
+						<p:commandLink id="verDetalles_#{valtrip.id}"
+							action="#{seatController.obtenerParticipantes(valtrip.id)}"
+							type="submit" value="#{valtrip.id}">
+						</p:commandLink>
 					</p:column>
 					<p:column id="promoEstado">
 						<f:facet name="header">#{msgs.campo_estadoViaje}</f:facet>
@@ -50,7 +53,12 @@
 				<p:dataTable id="tablaViajesParti" var="valtrip"
 					value="#{tripsController.participante}"
 					emptyMessage="#{msgs.mensaje_sinViajesParticipante}">
-					<p:column id="partiidViaje">#{valtrip.id}</p:column>
+					<p:column id="partiidViaje">
+						<p:commandLink id="verDetalles_#{valtrip.id}"
+							action="#{seatController.obtenerParticipantes(valtrip.id)}"
+							type="submit" value="#{valtrip.id}">
+						</p:commandLink>
+					</p:column>
 					<p:column id="partiEstado">#{valtrip.status}</p:column>
 					<p:column id="partiCierre">#{valtrip.closingDate}</p:column>
 					<p:column id="partiSalida">#{valtrip.departureDate}</p:column>
@@ -63,7 +71,12 @@
 				<p:dataTable id="tablaViajesEx" var="valtrip"
 					value="#{tripsController.excluido}"
 					emptyMessage="#{msgs.mensaje_sinViajesExcluidos}">
-					<p:column id="partiidViaje">#{valtrip.id}</p:column>
+					<p:column id="partiidViaje">
+						<p:commandLink id="verDetalles_#{valtrip.id}"
+							action="#{seatController.obtenerParticipantes(valtrip.id)}"
+							type="submit" value="#{valtrip.id}">
+						</p:commandLink>
+					</p:column>
 					<p:column id="excEstado">#{valtrip.status}</p:column>
 					<p:column id="excCierre">#{valtrip.closingDate}</p:column>
 					<p:column id="excSalida">#{valtrip.departureDate}</p:column>
@@ -77,7 +90,12 @@
 				<p:dataTable id="tablaViajesEspera" var="valtrip"
 					value="#{tripsController.enEspera}"
 					emptyMessage="#{msgs.mensaje_noViajesEspera}">
-					<p:column id="partiidViaje">#{valtrip.id}</p:column>
+					<p:column id="partiidViaje">
+						<p:commandLink id="verDetalles_#{valtrip.id}"
+							action="#{seatController.obtenerParticipantes(valtrip.id)}"
+							type="submit" value="#{valtrip.id}">
+						</p:commandLink>
+					</p:column>
 					<p:column id="espEstado">#{valtrip.status}</p:column>
 					<p:column id="espCierre">#{valtrip.closingDate}</p:column>
 					<p:column id="espSalida">#{valtrip.departureDate}</p:column>
@@ -91,7 +109,12 @@
 				<p:dataTable id="tablaViajesSin" var="valtrip"
 					value="#{tripsController.sinPlaza}"
 					emptyMessage="#{msgs.mensaje_noViajeSinPlaza}">
-					<p:column id="partiidViaje">#{valtrip.id}</p:column>
+					<p:column id="partiidViaje">
+						<p:commandLink id="verDetalles_#{valtrip.id}"
+							action="#{seatController.obtenerParticipantes(valtrip.id)}"
+							type="submit" value="#{valtrip.id}">
+						</p:commandLink>
+					</p:column>
 					<p:column id="sinEstado">#{valtrip.status}</p:column>
 					<p:column id="sinCierre">#{valtrip.closingDate}</p:column>
 					<p:column id="sinSalida">#{valtrip.departureDate}</p:column>
@@ -103,7 +126,7 @@
 					</p:column>
 				</p:dataTable>
 			</p:panel>
-			<h:messages style="color:red;margin:8px;"/>
+			<h:messages style="color:red;margin:8px;" />
 		</h:form>
 	</ui:define>
 
