Implementada la modificación de viajes

--- a/sdi2-38/WebContent/snippets/trip-form.xhtml
+++ b/sdi2-38/WebContent/snippets/trip-form.xhtml
@@ -214,7 +214,7 @@
 			
 			#{msgs.campo_pasajerosMaximos}
 			<h:panelGroup>
-			<h:inputText value="#{tripsController.trip.maxPax}" required="true"
+			<h:inputText value="#{tripsController.pasajerosMaximos}" required="true"
 				requiredMessage="#{msgs.mensaje_campoObligatorio}"
 				converterMessage="#{msgs.mensaje_valorInvalido}" id="maxPas"
 				size="15">
