Marcados TO-DOs en viajesInvolucrado

--- a/sdi2-38/WebContent/viajesInvolucrado.xhtml
+++ b/sdi2-38/WebContent/viajesInvolucrado.xhtml
@@ -46,10 +46,14 @@
 					</p:column>
 					<p:column id="promoOpciones">
 						<f:facet name="header">#{msgs.campo_opciones}</f:facet>
+						<!-- TO-DO: Completar -->
 						<h:commandLink value="#{msgs.enlace_verSolicitantes}"/>
 						<br/>
 						<h:commandLink value="#{msgs.enlace_modificarViaje}"
 						action="#{tripsController.preparaModificacion(valtrip)}"/>
+						<br/>
+						<!-- TO-DO: Completar -->
+						<h:commandLink value="#{msgs.enlace_cancelarViaje}"/>
 					</p:column>
 				</p:dataTable>
 				<p:dataTable id="tablaViajesParti" var="valtrip"
@@ -68,7 +72,9 @@
 					<p:column id="partiRelacion">#{msgs.relation_participante}
 					</p:column>
 					<p:column id="exOpciones" rendered="#{valtrip.status==OPEN}">
-					#{msgs.enlace_cancelar}</p:column>
+					<!-- TO-DO: Completar -->
+						<h:commandLink value="#{msgs.enlace_cancelarSolicitud}"/>
+					</p:column>
 				</p:dataTable>
 				<p:dataTable id="tablaViajesEx" var="valtrip"
 					value="#{tripsController.excluido}"
@@ -86,7 +92,8 @@
 					<p:column id="excRelacion">#{msgs.relation_excluido}
 					</p:column>
 					<p:column id="exOpciones" rendered="#{valtrip.status==OPEN}">
-					#{msgs.enlace_cancelar}
+					<!-- TO-DO: Completar -->
+						<h:commandLink value="#{msgs.enlace_cancelarSolicitud}"/>
 					</p:column>
 				</p:dataTable>
 				<p:dataTable id="tablaViajesEspera" var="valtrip"
@@ -105,7 +112,8 @@
 					<p:column id="espRelacion">#{msgs.relation_enEspera}
 					</p:column>
 					<p:column id="espOpciones" rendered="#{valtrip.status==OPEN}">
-					#{msgs.enlace_cancelar}
+					<!-- TO-DO: Completar -->
+						<h:commandLink value="#{msgs.enlace_cancelarSolicitud}"/>
 					</p:column>
 				</p:dataTable>
 				<p:dataTable id="tablaViajesSin" var="valtrip"
@@ -124,7 +132,8 @@
 					<p:column id="sinRelacion">#{msgs.relation_sinPlaza}
 					</p:column>
 					<p:column id="sinOpciones" rendered="#{valtrip.status==OPEN}">
-					#{msgs.enlace_cancelar}
+					<!-- TO-DO: Completar -->
+						<h:commandLink value="#{msgs.enlace_cancelarSolicitud}"/>
 					</p:column>
 				</p:dataTable>
 			</p:panel>
