Implementado el aceptar y excluir solicitudes

--- a/sdi2-38/WebContent/listarSolicitantes.xhtml
+++ b/sdi2-38/WebContent/listarSolicitantes.xhtml
@@ -19,7 +19,7 @@
 					emptyMessage="#{msgs.mensaje_sinSolicitantes}">
 					<p:column id="identificador">
 						<f:facet name="header">#{msgs.campo_identificador}</f:facet>
-						#{soli.id}
+						#{soli.userId}
 					</p:column>
 					<p:column id="aceptarPasajero">
 						<f:facet name="header">#{msgs.enlace_aceptar}</f:facet>
