Solucionado problema solicitud viajes

--- a/sdi2-38/WebContent/listaViajes.xhtml
+++ b/sdi2-38/WebContent/listaViajes.xhtml
@@ -12,7 +12,7 @@
 	</ui:define>
 
 	<ui:define name="cuerpo">
-		<h:form>
+		<h:form id="viajesDisponibles">
 			<p:panel>
 				<p:dataTable id="tablaViajes" var="valtrip"
 					value="#{tripsController.tripsDisponibles}" border="10"
