Test solicitar y aceptar en viaje

--- a/sdi2-38/WebContent/listarSolicitantes.xhtml
+++ b/sdi2-38/WebContent/listarSolicitantes.xhtml
@@ -12,7 +12,7 @@
 	</ui:define>
 
 	<ui:define name="cuerpo">
-		<h:form>
+		<h:form id="solicitantes">
 			<p:panel>
 				<p:dataTable id="tablaSolicitantes" var="soli"
 					value="#{applicationsController.applications}" border="10"
