--- a/sdi2-38/WebContent/infoCompleta.xhtml
+++ b/sdi2-38/WebContent/infoCompleta.xhtml
@@ -24,7 +24,10 @@
 			#{msgs.mensaje_participantesConfirmados}
 			<p:dataList value="#{seatController.participantes}" var="part"
 				type="ordered">
-				#{part.name} #{part.surname}	
+				#{part.name} #{part.surname}
+				<h:commandLink value="#{msgs.enlace_excluir}"
+				action="#{seatController.excluir(part)}"
+				rendered="#{valtrip.status=='OPEN' && seatControllet.promoter.id==sesion.usuario.id}"/>
 			</p:dataList>
 			
 			<h:messages style="color:red;margin:8px;"/>
