--- a/sdi2-38/WebContent/infoCompleta.xhtml
+++ b/sdi2-38/WebContent/infoCompleta.xhtml
@@ -27,7 +27,7 @@
 				#{part.name} #{part.surname}
 				<h:commandLink value="#{msgs.enlace_excluir}"
 				action="#{seatController.excluir(part)}"
-				rendered="#{seatController.trip.status=='OPEN' && seatController.promoter.id==sesion.usuario.id}"/>
+				rendered="#{seatController.trip.status=='OPEN' and seatController.promoter.id==sesion.usuario.id}"/>
 			</p:dataList>
 			
 			<h:messages style="color:red;margin:8px;"/>
